# Arkworks-Seminar-2025-Summer

./: Cargo.toml
src/circuits/: age1.rs  age2.rs  elgamal.rs  mod.rs  poly.rs
src/gadgets/: mod.rs
src/gadgets/public_encryptions/: mod.rs
src/gadgets/public_encryptions/elgamal/: constraints.rs  mod.rs
